kubernetes/fineract-mifoscommunity-deployment.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mifos-community
  name: mifos-community
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
  selector:
    app: mifos-community
    tier: frontend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mifos-community
  labels:
    app: mifos-community
spec:
  selector:
    matchLabels:
      app: mifos-community
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mifos-community
        tier: frontend
    spec:
      containers:
        - name: mifos-community
          image: openmf/web-app:master
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "200m"
              memory: "0.5Gi"
          volumeMounts:
            - name: web-app-config
              mountPath: /usr/share/nginx/html/assets/configuration
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 80
              name: mifos-community
      volumes:
        - name: web-app-config
          configMap:
            name: web-app-config
        - name: nginx-config
          configMap:
            name: web-app-config
