kubernetes/fineract-server-deployment.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements. See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership. The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.
#


apiVersion: v1
kind: Service
metadata:
  labels:
    app: fineract-server
  name: fineract-server
spec:
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: fineract-server
    tier: backend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fineract-server
  labels:
    app: fineract-server
spec:
  selector:
    matchLabels:
      app: fineract-server
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fineract-server
        tier: backend
    spec:
      containers:
        - name: fineract-server
          image: apache/fineract:latest
          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
            requests:
              cpu: "200m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /fineract-provider/actuator/health/liveness
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 90
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /fineract-provider/actuator/health/readiness
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 8443
              name: fineract-server
