kubernetes/fineract-ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements. See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership. The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.
#

# Ingress for fineract-server (HTTPS backend)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fineract-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /fineract-provider
        pathType: Prefix
        backend:
          service:
            name: fineract-server
            port:
              number: 8443

---

# Ingress for mifos-community (HTTP backend)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mifos-community-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mifos-community
            port:
              number: 9090
